--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@
 :: 6.0 Video Area CSS
 :: 7.0 Cool Facts Area CSS
 :: 8.0 Screenshots Area CSS
-:: 9.0 Pricing Plan Area CSS
+:: 9.0 Pricing Plan Area CSSR
 :: 10.0 Testimonials Area CSS
 :: 11.0 CTA Area CSS Start
 :: 12.0 Team Area CSS Start
@@ -30,7 +30,7 @@
 @import '../css/animate.css';
 @import '../css/magnific-popup.css';
 @import '../css/owl.carousel.min.css';
-@import '..css//slick.css';
+@import '../css//slick.css';
 @import '../css/font-awesome.min.css';
 @import '../css/themify-icons.css';
 @import '../css/ionicons.min.css';
@@ -473,6 +473,26 @@ p {
     padding: 0px 15px;
 }
 
+.form-control::-webkit-input-placeholder {
+    color: #cec1f4;
+    opacity: 1;
+}
+
+.form-control:-ms-input-placeholder {
+    color: #cec1f4;
+    opacity: 1;
+}
+
+.form-control::-ms-input-placeholder {
+    color: #cec1f4;
+    opacity: 1;
+}
+
+.form-control::placeholder {
+    color: #cec1f4;
+    opacity: 1;
+}
+
 .get-start-area .email:focus {
     border: none;
     outline-offset: transparent !important;
@@ -526,7 +546,6 @@ p {
 -------------------------- */
 
 .single-icon > i {
-
     font-size: 36px;
     color: #fb397d;
 }
@@ -547,7 +566,6 @@ p {
 }
 
 .single-special {
-
     border: 1px solid #eff2f6;
     padding: 40px;
     border-radius: 40px 40px 40px 0px;
@@ -558,7 +576,6 @@ p {
 }
 
 .special_description_content > h2 {
-    width: 80%;
     color: #5b32b4;
     font-size: 48px;
     margin-bottom: 30px;
